Anonymous | Login | 2021-01-26 05:14 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0026560 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2015-08-14 04:40 | 2016-04-20 15:49 | ||||
Reporter | Vico Liang | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2013 | OS Version | 64 bit | ||||
Product Version | [OCCT] 6.9.0 | ||||||||
Target Version | [OCCT] 7.0.0 | Fixed in Version | [OCCT] 7.0.0 | ||||||
Summary | 0026560: BRepBndLib build too large bounding box in Z direction for planar spline edge. | ||||||||
Description | The bounding box for a planar spline located in XY plane has too large depth(>30.0) in z direction. This is definitely wrong result. Codes as below: TopoDS_Shape aPlanarSpline = // load from PlanarSpline.brep. Bnd_Box aBox; BRepBndLib::Add(aPlanarSpline, aBox); | ||||||||
Steps To Reproduce | restore d:/PlanarSpline.brep b1 bounding b1 should be thin on z axis | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs moddata_3 bug26560 | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
||||||
|
![]() |
|
(0044341) git (administrator) 2015-08-17 16:01 |
Branch CR26560 has been created by aml. SHA-1: aac91d64e5ef49d266242dce340329f5c06243d4 Detailed log of new commits: Author: aml Date: Mon Aug 17 14:06:02 2015 +0300 0026560: BRepBndLib build too large bounding box in Z direction for planar spline edge. Poles bounding box for curve added. |
(0044342) aml (developer) 2015-08-17 16:02 |
Dear jgv, Please check current state of CR26560 branch. |
(0044488) Vico Liang (developer) 2015-08-20 18:05 |
Dear aml, I'd like to reminder you that It seems you just do fix for the spline curve, this issue is also reproduced for bezier curve. |
(0044493) git (administrator) 2015-08-20 22:08 |
Branch CR26560 has been updated forcibly by aml. SHA-1: 8ccd7b3d33f6da75dc1726ac24f77666b8962a87 |
(0044494) aml (developer) 2015-08-20 22:09 |
Dear Vico, Updated branch contains fix for bezier case too. |
(0044495) git (administrator) 2015-08-21 08:26 |
Branch CR26560 has been updated forcibly by aml. SHA-1: 64574db538a08ba6600604efdcec6e7ea7955623 |
(0044673) msv (developer) 2015-08-26 16:14 |
Dear Vico, could you please attach a bezier sample here to reproduce the problem? |
(0044675) msv (developer) 2015-08-26 16:26 |
Reviewed. |
(0044684) git (administrator) 2015-08-26 18:31 |
Branch CR26560 has been updated forcibly by mkv. SHA-1: 914afc74a4af048d3034ba049189804525124b57 |
(0044704) mkv (tester) 2015-08-27 11:48 |
Dear BugMaster, Branch CR26560 was rebased on current master of occt git-repository. SHA-1: 914afc74a4af048d3034ba049189804525124b57 |
(0044705) mkv (tester) 2015-08-27 11:48 |
Dear BugMaster, Branch CR26560 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 914afc74a4af048d3034ba049189804525124b57 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: http://occt-tests/CR26560-master-occt-64/Debian70-64/summary.html [^] http://occt-tests/CR26560-master-occt-64/Windows-64-VC10/summary.html [^] boolean bfuse_complex F1 boolean bsection M7 bugs modalg_4 bug697_2, bug697_4, bug697_7, bug697_8 bugs modalg_6 bug26444 bugs moddata_2 bug23165 de iges_2 H9 http://occt-tests/CR26560-master-products-64/Debian70-64/parasolid/doc_3/B7.html [^] http://occt-tests/CR26560-master-products-64/Windows-64-VC10/parasolid/doc_3/B7.html [^] parasolid doc_3 B7: FAILED http://occt-tests/CR26560-master-products-64/Debian70-64/parasolid/doc_3/D2.html [^] http://occt-tests/CR26560-master-products-64/Windows-64-VC10/parasolid/doc_3/D2.html [^] parasolid doc_3 D2: FAILED Testing cases: http://occt-tests/CR26560-master-occt-64/Debian70-64/bugs/moddata_3/bug26560.html [^] http://occt-tests/CR26560-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug26560.html [^] bugs moddata_3 bug26560: OK Testing on Linux: occt component : Total MEMORY difference: 91272666 / 91462312 [-0.21%] Total CPU difference: 17691.419999999336 / 17680.259999998943 [+0.06%] products component : Total MEMORY difference: 25069927 / 25103082 [-0.13%] Total CPU difference: 7285.599999999994 / 7004.920000000001 [+4.01%] Testing on Windows: occt component : Total MEMORY difference: 56899034 / 56897375 [+0.00%] Total CPU difference: 16327.033459799104 / 16641.422275099107 [-1.89%] products component : Total MEMORY difference: 16117388 / 16115279 [+0.01%] Total CPU difference: 5225.893099099964 / 5289.6195075999685 [-1.20%] There are following differences in images found by testdiff. http://occt-tests/CR26560-master-occt-64/Debian70-64/diff-Debian70-64.html [^] http://occt-tests/CR26560-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html [^] IMAGE bugs modalg_1 bug10232: bug10232.png differs IMAGE bugs moddata_2 bug469: bug469.png differs IMAGE bugs modalg_5 bug24220: bug24220_Driver1_Viewer1_View1.png differs IMAGE bugs modalg_5 bug24244: bug24244_Driver1_Viewer1_View1.png differs |
(0044706) git (administrator) 2015-08-27 11:48 |
Branch CR26560 has been updated by mkv. SHA-1: 5ae48b256287c0a71c4a4a13558020748939cf2a Detailed log of new commits: Author: mkv Date: Thu Aug 27 11:47:52 2015 +0300 Test case for issue CR26560 |
(0044707) mkv (tester) 2015-08-27 11:49 |
Dear aml, could you please review following test case bugs moddata_3 bug26560 |
(0046306) git (administrator) 2015-09-30 07:58 |
Branch CR26560_2 has been created by aml. SHA-1: 37ecf17a4bc96cc41b7cf865b88ca91f207352eb Detailed log of new commits: Author: aml Date: Thu Sep 24 17:21:18 2015 +0300 Function to compute subshape max tolerance has been added. Fixed bounding box expanding at Face/Face step of boolean operation. Test cases are updated to the new behavior. Author: mkv Date: Thu Aug 27 11:47:52 2015 +0300 Test case for issue CR26560 Author: aml Date: Mon Aug 17 14:06:02 2015 +0300 0026560: BRepBndLib build too large bounding box in Z direction for planar spline edge. Poles bounding box for curve added for bezier and bspline curves. Method Poles() for Bezier curve added. |
(0046307) aml (developer) 2015-09-30 07:59 |
Dear mkv, Test case bugs moddata_3 bug26560 is OK. |
(0046308) aml (developer) 2015-09-30 08:00 |
Dear msv, Please check current state of CR26560_2 branch. |
(0046315) git (administrator) 2015-09-30 12:06 |
Branch CR26560_2 has been updated forcibly by aml. SHA-1: ea6fe4b1040e8e2ebd8514b3d3a1d15ceba8cafd |
(0046316) msv (developer) 2015-09-30 12:07 |
Reviewed. |
(0046370) mkv (tester) 2015-10-01 14:45 |
Dear BugMaster, Branch CR26560_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: ea6fe4b1040e8e2ebd8514b3d3a1d15ceba8cafd Number of compiler warnings: occt component : Linux: 13 (13 on master) Windows: 0 (0 on master) products component : Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: http://occt-tests/CR26560-2-master-products-64/Debian70-64/summary.html [^] http://occt-tests/CR26560-2-master-products-64/Windows-64-VC10/summary.html [^] Failed: parasolid doc_3 B7, D2 Testing cases: http://occt-tests/CR26560-2-master-occt-64/Debian70-64/bugs/moddata_3/bug26560.html [^] http://occt-tests/CR26560-2-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug26560.html [^] bugs moddata_3 bug26560: OK Testing on Linux: occt component : Total MEMORY difference: 92318309 / 93316956 [-1.07%] Total CPU difference: 19445.489999999365 / 19750.569999999236 [-1.54%] products component : Total MEMORY difference: 26228415 / 26289215 [-0.23%] Total CPU difference: 7354.959999999993 / 7196.2199999999975 [+2.21%] Testing on Windows: occt component : Total MEMORY difference: 57918700 / 57931477 [-0.02%] Total CPU difference: 18407.868398398925 / 17723.78841329908 [+3.86%] products component : Total MEMORY difference: 17134397 / 17135868 [-0.01%] Total CPU difference: 5930.986418899976 / 5621.839237199961 [+5.50%] There are following differences in images found by testdiff. http://occt-tests/CR26560-2-master-occt-64/Debian70-64/diff-Debian70-64.html [^] http://occt-tests/CR26560-2-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html [^] IMAGE boolean gdml_private F6: F6.png differs IMAGE boolean gdml_private O4: O4.png differs IMAGE boolean gdml_private O8: O8.png differs IMAGE boolean volumemaker B8: B8.png differs |
(0046372) mkv (tester) 2015-10-01 14:46 |
Dear aml, Branch has been rejected due to: - failed test-case for issue - differences in images |
(0046386) aml (developer) 2015-10-02 07:35 |
Dear mkv, I Please update failed tests to the new behaviour. II Differences in images are OK. |
(0046421) mkv (tester) 2015-10-02 18:02 |
Dear BugMaster, following test cases are corrected and pushed to new branch CR26560-Products of products git-repository parasolid doc_3 B7, D2 Now its are OK. |
(0046422) mkv (tester) 2015-10-02 18:03 |
Dear BugMaster, Branch CR26560_2 is TESTED. |
(0047050) git (administrator) 2015-10-16 16:47 |
Branch CR26560 has been deleted by kgv. SHA-1: 5ae48b256287c0a71c4a4a13558020748939cf2a |
(0047078) git (administrator) 2015-10-16 16:57 |
Branch CR26560_2 has been deleted by kgv. SHA-1: ea6fe4b1040e8e2ebd8514b3d3a1d15ceba8cafd |
![]() |
|||
occt: master bcd19756
Timestamp: 2015-10-08 06:39:35 Author: aml Committer: bugmaster [ Details ] [ Diff ] |
0026560: BRepBndLib build too large bounding box in Z direction for planar spline edge. Poles bounding box for curve added for bezier and bspline curves. Method Poles() for Bezier curve added. Test case for issue CR26560 Function to compute subshape max tolerance has been added. Fixed bounding box expanding at Face/Face step of boolean operation. Test cases are updated to the new behavior. |
||
mod - src/BndLib/BndLib_Add3dCurve.cxx | [ Diff ] [ File ] | ||
mod - src/BOPAlgo/BOPAlgo_PaveFiller_6.cxx | [ Diff ] [ File ] | ||
mod - src/BRep/BRep_Tool.cxx | [ Diff ] [ File ] | ||
mod - src/BRep/BRep_Tool.hxx | [ Diff ] [ File ] | ||
mod - src/Geom/Geom_BezierCurve.cxx | [ Diff ] [ File ] | ||
mod - src/Geom/Geom_BezierCurve.hxx | [ Diff ] [ File ] | ||
mod - tests/boolean/volumemaker/B7 | [ Diff ] [ File ] | ||
mod - tests/boolean/volumemaker/B9 | [ Diff ] [ File ] | ||
mod - tests/boolean/volumemaker/C4 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_2/bug472_2 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_2/bug472_3 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_4/bug697_2 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_4/bug697_4 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_4/bug697_7 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_4/bug697_8 | [ Diff ] [ File ] | ||
mod - tests/bugs/moddata_2/bug23165 | [ Diff ] [ File ] | ||
add - tests/bugs/moddata_3/bug26560 | [ Diff ] [ File ] | ||
mod - tests/de/iges_2/H9 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2015-08-14 04:40 | Vico Liang | New Issue | |
2015-08-14 04:40 | Vico Liang | Assigned To | => jgv |
2015-08-14 04:40 | Vico Liang | File Added: PlanarSpline.brep | |
2015-08-14 04:45 | Vico Liang | File Added: WrongBoundingBox.png | |
2015-08-14 12:28 | jgv | Assigned To | jgv => aml |
2015-08-17 16:01 | git | Note Added: 0044341 | |
2015-08-17 16:02 | aml | Note Added: 0044342 | |
2015-08-17 16:02 | aml | Assigned To | aml => jgv |
2015-08-17 16:02 | aml | Status | new => resolved |
2015-08-17 16:02 | aml | Steps to Reproduce Updated | View Revisions |
2015-08-20 18:05 | Vico Liang | Note Added: 0044488 | |
2015-08-20 22:08 | git | Note Added: 0044493 | |
2015-08-20 22:09 | aml | Note Added: 0044494 | |
2015-08-21 08:26 | git | Note Added: 0044495 | |
2015-08-24 15:16 | aml | Assigned To | jgv => msv |
2015-08-26 16:14 | msv | Note Added: 0044673 | |
2015-08-26 16:26 | msv | Note Added: 0044675 | |
2015-08-26 16:26 | msv | Assigned To | msv => bugmaster |
2015-08-26 16:26 | msv | Status | resolved => reviewed |
2015-08-26 17:23 | mkv | Assigned To | bugmaster => mkv |
2015-08-26 18:31 | git | Note Added: 0044684 | |
2015-08-27 11:48 | mkv | Note Added: 0044704 | |
2015-08-27 11:48 | mkv | Note Added: 0044705 | |
2015-08-27 11:48 | git | Note Added: 0044706 | |
2015-08-27 11:49 | mkv | Note Added: 0044707 | |
2015-08-27 11:49 | mkv | Assigned To | mkv => aml |
2015-08-27 11:49 | mkv | Status | reviewed => assigned |
2015-08-27 11:49 | mkv | Test case number | => bugs moddata_3 bug26560 |
2015-09-30 07:58 | git | Note Added: 0046306 | |
2015-09-30 07:59 | aml | Note Added: 0046307 | |
2015-09-30 08:00 | aml | Note Added: 0046308 | |
2015-09-30 08:00 | aml | Assigned To | aml => msv |
2015-09-30 08:00 | aml | Status | assigned => resolved |
2015-09-30 12:06 | git | Note Added: 0046315 | |
2015-09-30 12:07 | msv | Note Added: 0046316 | |
2015-09-30 12:07 | msv | Assigned To | msv => bugmaster |
2015-09-30 12:07 | msv | Status | resolved => reviewed |
2015-09-30 15:08 | mkv | Assigned To | bugmaster => mkv |
2015-10-01 14:45 | mkv | Note Added: 0046370 | |
2015-10-01 14:45 | mkv | Assigned To | mkv => aml |
2015-10-01 14:45 | mkv | Status | reviewed => assigned |
2015-10-01 14:46 | mkv | Note Added: 0046372 | |
2015-10-02 07:35 | aml | Note Added: 0046386 | |
2015-10-02 07:35 | aml | Assigned To | aml => mkv |
2015-10-02 07:35 | aml | Status | assigned => feedback |
2015-10-02 18:02 | mkv | Note Added: 0046421 | |
2015-10-02 18:03 | mkv | Note Added: 0046422 | |
2015-10-02 18:03 | mkv | Assigned To | mkv => bugmaster |
2015-10-02 18:03 | mkv | Status | feedback => tested |
2015-10-09 15:22 | bugmaster | Changeset attached | => occt master bcd19756 |
2015-10-09 15:22 | bugmaster | Status | tested => verified |
2015-10-09 15:22 | bugmaster | Resolution | open => fixed |
2015-10-16 16:47 | git | Note Added: 0047050 | |
2015-10-16 16:57 | git | Note Added: 0047078 | |
2016-01-20 10:23 | kgv | Relationship added | parent of 0027092 |
2016-04-20 15:43 | aiv | Fixed in Version | => 7.0.0 |
2016-04-20 15:49 | aiv | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |